--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
                       <th>Date of Birth:&nbsp</th>
                       <td id='birthdate'></td>
                     </tr>
+                    <tr>
+                      <th>Marital Status:&nbsp</th>
+                      <td id='marital-status'></td>
+                    </tr>
           
                   </table>
     
