--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a class="nav-link" aria-current="page" href="#pt-1">Lab Results</a></li>
+              <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Lab Results</a></li>
               <li class="nav-item"><a class="nav-link" aria-current="page" href="#topics">Learning</a></li>
               <li class="nav-item"><a class="nav-link" aria-current="page" href="#resources">Resources</a></li>
             </ul>
@@ -87,6 +87,10 @@
                     <tr>
                       <th>Marital Status:&nbsp</th>
                       <td id='marital-status'></td>
+                    </tr>
+                    <tr>
+                      <th>Phone:&nbsp</th>
+                      <td id='phone-number'></td>
                     </tr>
           
                   </table>
